tests/diagnostics/statements/bindings/type_mismatch/expect.txt
# exit: 1
input/main.coppice:2:19: error: type mismatch: expected boolean, got int64
      x: boolean := 1
                    ^
